{
    "button": {
        "submit": "Submit",
        "cancel": "Cancel",
        "save": "Save",
        "close": "Close",
        "back": "Back"
    },
    "loading": "Loading…",
    "error": {
        "generic": "Something went wrong"
    },
    "tabs": {
        "startTitle": "Start",
        "tasksTitle": "Tasks",
        "settingsTitle": "Settings"
    }
}
